TokenMetrics API 1. Added TokenMetrics API Module to get AI info about coins. 2. A new tab within ViewPager in CoinFragment added to show TokenMetrics reports (AiReport fragment). 3. TokenMetrics reports are  converted to a readable HTML text.
Minor updates:
4. SearchFragment RV Item's presentation is changed for more comfortable view.
5. Added backPressed handler.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ local.properties
 cmc_api.key
 /cmc_api/src/main/java/dev/kokorev/cmc_api/CmcApiKey.kt
 /cmc_api/src/main/java/dev/kokorev/coin_paprika_api/CoinPaprikaApiKey.kt
+/token_metrics_api/src/main/java/dev/kokorev/token_metrics_api/TokenMetricsApiKey.kt
