Preferences saving. 1. In Settings user can now filter coins by min MCap and min daily Vol. Settings is saved to Shared preferences. 2. Main fragment reworked. Now it works with the same coin filters and user can indicate what interval to take into consideration to get gainers and losers. This setting is also saved to SP. 3. Some UI tweaks. 4. Number of top coins to show om Main is now set in Settings and saved to SP. 5. AI reports fragment reworked. Now different reports is opened in it's own collapsible card. 6. Added TokenMetricsApi methods to get more AI info. 7. Added notifications when one of favorites moves more than established by the user. 8. In settings user can indicate if he wants to receive notifications and min price change for it. 9. Notification manager added. 10. Notification permissions checked and asked for when the checkbox is enabled in settings. 11. WorkManager starts a periodic work to get price info from API and check favorites price changes. 12. Atm price check period is 15 min for testing purposes, in real app should be set to 24hr.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,12 @@
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="28" />
 
     <application
@@ -15,15 +17,20 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/cryptoview"
+        android:icon="@drawable/cryptoview_blue_square"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/cryptoview_round"
+        android:roundIcon="@drawable/cryptoview_blue_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoView"
         tools:targetApi="31">
+        <service
+            android:name=".backgroundService.FavoritesCheckService"
+            android:enabled="true"
+            android:icon="@drawable/cryptoview_blue_square"
+            android:roundIcon="@drawable/cryptoview_blue_round"
+            android:exported="false" />
         <activity
             android:name=".views.MainActivity"
-            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
