--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,11 +10,12 @@ material = "1.12.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
 legacySupportV4 = "1.0.0"
-lifecycleLivedataKtx = "2.7.0"
-lifecycleViewmodelKtx = "2.7.0"
-fragmentKtx = "1.7.0"
+lifecycleLivedataKtx = "2.8.0"
+lifecycleViewmodelKtx = "2.8.0"
+fragmentKtx = "1.7.1"
 jetbrainsKotlinJvm = "1.9.0"
-viewPager2_version = "1.0.0"
+viewPager2_version = "1.1.0"
+parcelize_version = "2.0.0"
 
 room_version = "2.6.1"
 okhttp_version = "4.12.0"
@@ -30,6 +31,8 @@ retrofit_adapter_rxjava3_version = "3.0.0"
 anychart_version = "1.1.5"
 androidplot_version = "1.5.10"
 highcharts_version = "11.4.1"
+
+airbnb_paris_version = "2.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -56,7 +59,7 @@ dagger = { group = "com.google.dagger", name = "dagger", version.ref = "dagger_v
 daggerCompiler = { group = "com.google.dagger", name = "dagger-compiler", version.ref = "dagger_version" }
 
 work = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "work_version" }
-work_rxjava2 = { group = "androidx.work", name = "work-rxjava2", version.ref = "work_version" }
+work_rxjava3 = { group = "androidx.work", name = "work-rxjava3", version.ref = "work_version" }
 
 rxandroid = { group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxandroid_version" }
 rxjava = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxjava_version" }
@@ -79,10 +82,14 @@ anychart = { group = "com.github.AnyChart", name = "AnyChart-Android", version.r
 androidplot = { group = "com.androidplot", name = "androidplot-core" , version.ref = "androidplot_version" }
 highcharts = { group = "com.github.highcharts", name = "highcharts-android", version.ref = "highcharts_version" }
 
+airbnb_paris = { group = "com.airbnb.android", name = "paris", version.ref = "airbnb_paris_version" }
+airbnb_paris_processor = { group = "com.airbnb.android", name = "paris-processor", version.ref = "airbnb_paris_version" }
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
+parcelize = { id = "kotlin-parcelize" }
 
