--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".backgroundService.PortfolioNotificationReceiver"
+            android:exported="false" >
+
+        </receiver>
     </application>
 
 </manifest>
