--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ lifecycleLivedataKtx = "2.8.1"
 lifecycleViewmodelKtx = "2.8.1"
 fragmentKtx = "1.7.1"
 jetbrainsKotlinJvm = "1.9.0"
+mockitoCore = "4.8.0"
 viewPager2_version = "1.1.0"
 parcelize_version = "2.0.0"
 flexbox = "3.0.0"
@@ -64,6 +65,7 @@ androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecy
 androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
 
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
 viewPager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewPager2_version" }
 flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref = "flexbox" }
 
